# image-gallery-website

./: Cargo.toml
src/: main.rs
src/templates/: upload_image.html
